--- a/gazebo/gui/building/CMakeLists.txt
+++ b/gazebo/gui/building/CMakeLists.txt
@@ -65,7 +65,7 @@ set (headers
 )
 
 set (resources ../resources.qrc)
-QT4_WRAP_CPP(headers_MOC ${qt_headers})
+QT4_WRAP_CPP(headers_MOC ${qt_headers}  OPTIONS -DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED)
 QT4_ADD_RESOURCES(resources_RCC ${resources})
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
