Fix for parse error boost join

--- a/gazebo/gui/viewers/CMakeLists.txt
+++ b/gazebo/gui/viewers/CMakeLists.txt
@@ -32,7 +32,7 @@ gz_build_qt_tests(${qt_tests})
 
 set (resources ../resources.qrc)
 
-QT4_WRAP_CPP(headers_MOC ${qt_headers} OPTIONS -DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED)
+QT4_WRAP_CPP(headers_MOC ${qt_headers} OPTIONS -DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED -DBOOST_NO_TEMPLATE_PARTIAL_SPECIALIZATION)
 QT4_ADD_RESOURCES(resources_RCC ${resources})
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
