--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories (
-  ${PROJECT_BINARY_DIR}/gazebo
+  ${PROJECT_SOURCE_DIR}/gazebo
   ${PROJECT_BINARY_DIR}/gazebo
   ${ODE_INCLUDE_DIRS}
   ${OPENGL_INCLUDE_DIR}
@@ -40,8 +40,8 @@ execute_process(COMMAND cmake -E remove_directory ${CMAKE_BINARY_DIR}/test_resul
 execute_process(COMMAND cmake -E make_directory ${CMAKE_BINARY_DIR}/test_results)
 include_directories(${GTEST_INCLUDE_DIRS})
 
-set(TEST_TYPE "PERFORMANCE")
-add_subdirectory(performance)
+#set(TEST_TYPE "PERFORMANCE")
+#add_subdirectory(performance)
 set(TEST_TYPE "INTEGRATION")
 add_subdirectory(regression)
 add_subdirectory(cmake)
