--- a/test/performance/CMakeLists.txt
+++ b/test/performance/CMakeLists.txt
@@ -25,5 +25,5 @@ set(tests
 )
 
 set (GZ_BUILD_TESTS_EXTRA_EXE_SRCS
-  "${PROJECT_SOURCE_DIR}/gazebo/Server.cc;${PROJECT_SOURCE_DIR}/gazebo/Master.cc;${PROJECT_SOURCE_DIR}/gazebo/gazebo.cc;${PROJECT_SOURCE_DIR}/test/ServerFixture.cc")
+  "${PROJECT_SOURCE_DIR}/gazebo/Server.cc;${PROJECT_SOURCE_DIR}/gazebo/Master.cc;${PROJECT_SOURCE_DIR}/gazebo/gazebo.cc")
 gz_build_tests(${tests})
